# sibur_test

./: Dockerfile  readme.md
src/: .env  data_sender.py  event_aggregator.py  main.py  metrics_collector.py  pyproject.toml  readme.md  vabus.py
