[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Bekbolot Saribaev <saribaev93@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
environs = "^11.0.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
